Properly cast buffer and latency times when setting properties

This fix a crash on 32 bits system as gcc can't figure out the right size of
the value.

Thanks to Raluca-Elena Podiuc for her help in debugging this.

https://bugzilla.gnome.org/show_bug.cgi?id=665171